fix a bug in language transition

--- a/lang/ar.json
+++ b/lang/ar.json
@@ -2,7 +2,7 @@
     "home_title" : "اهلا بك في تطبيق ",
     "home_patient" :"انا مريض واريد البحث عن طبيب",
     "home_doctor" : "انا طبيب واريد التسجيل في التطبيق",
-    "about_us" : "About Us",
+    "about_us" : "من نحن",
     "patient_appbar" : "Fill The Data",
     "patient_name" : "Name", 
     "patient_male" : "Male",
