Minor bug Fixes

--- a/lang/ar.json
+++ b/lang/ar.json
@@ -9,6 +9,8 @@
     "patient_female" : "Female", 
     "patient_chronic_diseases" : "Chronic Diseases",
     "patient_dialogue_list_button" : "Choose",
+    "patient_dialogue_cancel" : "Cancel",
+    "patient_dialogue_ok" : "OK",
     "patient_area_of_choice" : "The body area of your complain",
     "patient_complain" : "Your complain",
     "patient_disablehint" : "First choose your complain",
@@ -20,7 +22,14 @@
     "doctor_form_phoneNumber" : "Phone Number",
     "doctor_form_province": "Province",
     "doctor_form_location": "Location",
-    "doctor_form_search": "Search"
-
-        
+    "doctor_form_search": "Search",
+    "cd_hyt" : "Elevated Blood Pressure",
+    "cd_DM" : "Diabetus Mellitus",
+    "cd_heart" : "Heart Disease",
+    "cd_ckd" : "Kidney Diseae",
+    "ed_liver" : "Liver Disease",
+    "ed_brain" : "Demantia",
+    "ed_thyroid" : "Goitre",
+    "ed_lung" : "Lung Disease",
+    "ed_ashma" : "Ashma"  
 }
