add/ Locale-Font

--- a/lang/ar.json
+++ b/lang/ar.json
@@ -1,35 +1,42 @@
 {
+    "english" : "انكليزي",
+    "arabic" : "عربي",
     "home_title" : "اهلا بك في تطبيق ",
     "home_patient" :"انا مريض واريد البحث عن طبيب",
     "home_doctor" : "انا طبيب واريد التسجيل في التطبيق",
     "about_us" : "من نحن",
-    "patient_appbar" : "Fill The Data",
-    "patient_name" : "Name", 
-    "patient_male" : "Male",
-    "patient_female" : "Female", 
-    "patient_chronic_diseases" : "Chronic Diseases",
-    "patient_dialogue_list_button" : "Choose",
-    "patient_dialogue_cancel" : "Cancel",
-    "patient_dialogue_ok" : "OK",
-    "patient_area_of_choice" : "The body area of your complain",
+    "patient_appbar" : "ملي المعلومات",
+    "patient_name" : "الاسم", 
+    "patient_male" : "ذكر",
+    "patient_female" : "انثى", 
+    "patient_chronic_diseases" : "الامراض المزمنه",
+    "patient_dialogue_list_button" : "اختر",
+    "patient_dialogue_cancel" : "الغاء",
+    "patient_dialogue_ok" : "تم",
+    "patient_area_of_choice" : "موضع الجسم الذي تعاني منه",
     "patient_complain" : "Your complain",
-    "patient_disablehint" : "First choose your complain",
-    "patient_other_complain" : "Do you have other complains",
-    "patient_search_button" : "Search",
-    "doctor_form_appbar" : "Update Your Information",
-    "doctor_form_name" : "Name",
-    "doctor_form_speciality" : "Speciality",
-    "doctor_form_phoneNumber" : "Phone Number",
-    "doctor_form_province": "Province",
-    "doctor_form_location": "Location",
-    "doctor_form_search": "Search",
-    "cd_hyt" : "Elevated Blood Pressure",
-    "cd_DM" : "Diabetus Mellitus",
-    "cd_heart" : "Heart Disease",
+    "patient_disablehint" : "اولا اختر الموضع الذي تعاني منه",
+    "patient_other_complain" : "هل لديك اعراض اخرى",
+    "patient_search_button" : "ابحث",
+    "register_appbar" : "التسجيل",
+    "register_email" : "الايميل",
+    "register_password" : "الرقم السري",
+    "register_button": "سجل",
+
+    "doctor_form_appbar" : "حدث معلوماتك",
+    "doctor_form_name" : "الاسم",
+    "doctor_form_speciality" : "الاختصاص",
+    "doctor_form_phoneNumber" : "رقم الهاتف",
+    "doctor_form_province": "المحافظه",
+    "doctor_form_location": "الموقع",
+    "doctor_form_search": "ابحث",
+    "cd_hyt" : "ارتفاع الضغط المزمن",
+    "cd_DM" : " مرض السكري",
+    "cd_heart" : "امراض القلب",
     "cd_ckd" : "Kidney Diseae",
     "ed_liver" : "Liver Disease",
     "ed_brain" : "Demantia",
     "ed_thyroid" : "Goitre",
-    "ed_lung" : "Lung Disease",
-    "ed_ashma" : "Ashma"  
+    "ed_lung" : "امراض الرئه",
+    "ed_ashma" : "مرض الربو"  
 }
