chronic diseases list

--- a/lang/ar.json
+++ b/lang/ar.json
@@ -22,7 +22,6 @@
     "register_email" : "الايميل",
     "register_password" : "الرقم السري",
     "register_button": "سجل",
-
     "doctor_form_appbar" : "حدث معلوماتك",
     "doctor_form_name" : "الاسم",
     "doctor_form_speciality" : "الاختصاص",
@@ -30,13 +29,19 @@
     "doctor_form_province": "المحافظه",
     "doctor_form_location": "الموقع",
     "doctor_form_search": "ابحث",
-    "cd_hyt" : "ارتفاع الضغط المزمن",
-    "cd_DM" : " مرض السكري",
-    "cd_heart" : "امراض القلب",
+    "cd_HTN" : "Elevated Blood Pressure",
+    "cd_DM" : "Diabetus Mellitus",
+    "cd_heart" : "Chronic Heart Disease",
+    "cd_heartFailure" : "Heart Failure",
+    "cd_ctd" : "Connective tissue disease",
     "cd_ckd" : "Kidney Diseae",
-    "ed_liver" : "Liver Disease",
-    "ed_brain" : "Demantia",
-    "ed_thyroid" : "Goitre",
-    "ed_lung" : "امراض الرئه",
-    "ed_ashma" : "مرض الربو"  
+    "cd_liver" : "Liver Disease",
+    "cd_intestine" : "Chronic Intestinal Disease",
+    "cd_epilepsy" : "Epilespy",
+    "cd_cva" : "Stroke",
+    "cd_thyroid" : "Previous Goitre",
+    "cd_lung" : "Chronic Lung Disease",
+    "cd_copd" : "COPD",
+    "cd_ashma" : "Ashma",
+    "cd_tumor" : "Malignancy"
 }
