3nd Batch of UI changes

--- a/lang/en.json
+++ b/lang/en.json
@@ -3,7 +3,7 @@
     "english" : "ُEnglish",
     "arabic" : "Arabic",
     "home_title" : "Welcome to Cura",
-    "home_patient" :"I'm a Patient",
+    "home_patient" :"I'm a Patient who ",
     "home_doctor" : "I'm a Doctor",
     "about_us" : "About us",
     "patient_appbar" : "Fill The Data",
