localization 1st batch

--- a/lang/ar.json
+++ b/lang/ar.json
@@ -2,34 +2,45 @@
     "next": "التالي",
     "english" : "انكليزي",
     "arabic" : "عربي",
+    "search" :  "ابحث",
+    "snack_error_sign" : "خطا في الدخول",
+    "snack_connectivity" : "لا يوجد اتصال بالشبكه",
     "home_title" : "اهلا بك في كيورا",
-    "home_patient" :"انا مريض واريد البحث عن طبيب",
-    "home_doctor" : "انا طبيب واريد التسجيل في التطبيق",
+    "home_patient_title" :"انا مريض\n",
+    "home_patient_subtitle" :"اريد البحث عن طبيب",
+    "home_doctor_title" : "انا طبيب\n",
+    "home_doctor_subtitle" : "اريد التسجيل",
     "about_us" : "من نحن",
-    "patient_appbar" : "ملي المعلومات",
-    "patient_name" : "الاسم", 
-    "patient_male" : "ذكر",
-    "patient_female" : "انثى", 
-    "patient_chronic_diseases" : "الامراض المزمنه",
-    "patient_dialogue_list_button" : "اختر",
-    "patient_dialogue_cancel" : "الغاء",
-    "patient_dialogue_ok" : "تم",
-    "patient_area_of_choice" : "موضع الجسم الذي تعاني منه",
-    "patient_complain" : "Your complain",
-    "patient_disablehint" : "اولا اختر الموضع الذي تعاني منه",
-    "patient_other_complain" : "هل لديك اعراض اخرى",
-    "patient_search_button" : "ابحث",
-    "register_appbar" : "التسجيل",
-    "register_email" : "الايميل",
-    "register_password" : "الرقم السري",
-    "register_button": "سجل",
-    "doctor_form_appbar" : "حدث معلوماتك",
+    "sign_in": "الدخول",
+    "register" : "التسجيل",
+    "email": "الايميل",
+    "enter_your_email" : "ادخل الايميل الشخصي",
+    "password" : "الرمز السري",
+    "enter_your_password" : "ادخل الرمز السري",
+    "password_validator" : "الرمز السري يجب ان يكون اكثر من 8 رموز",
+    "forget_password" : "نسيت الرمز السري؟",
+    "does_have_account" : "لم تسجل في التطبيق سابقا؟",
+
+
     "doctor_form_name" : "الاسم",
     "doctor_form_speciality" : "الاختصاص",
     "doctor_form_phoneNumber" : "رقم الهاتف",
     "doctor_form_province": "المحافظه",
     "doctor_form_location": "الموقع",
     "doctor_form_search": "ابحث",
+
+
+
+    "patient_appbar" : "ملي المعلومات",
+    "patient_name" : "الاسم", 
+    "patient_male" : "ذكر",
+    "patient_female" : "انثى", 
+    "patient_chronic_diseases" : "الامراض المزمنه",
+    "patient_area_of_choice" : "موضع الجسم الذي تعاني منه",
+    "patient_complain" : "Your complain",
+    "patient_disablehint" : "اولا اختر الموضع الذي تعاني منه",
+    "patient_other_complain" : "هل لديك اعراض اخرى",
+    
     "cd_HTN" : "Elevated Blood Pressure",
     "cd_DM" : "Diabetus Mellitus",
     "cd_heart" : "Chronic Heart Disease",
