--- a/lang/en.json
+++ b/lang/en.json
@@ -2,10 +2,34 @@
     "next": "Next",
     "english" : "ُEnglish",
     "arabic" : "Arabic",
+    "search" :  "Search",
+    "snack_error_sign" : "Error Signing in",
+    "snack_connectivity" : "No Internet Connection",
     "home_title" : "Welcome to Cura",
-    "home_patient" :"I'm a Patient who ",
-    "home_doctor" : "I'm a Doctor",
-    "about_us" : "About us",
+    "home_patient_title" :"I'm a Patient\n",
+    "home_patient_subtitle" :"I want to search",
+    "home_doctor_title" : "I'm a Doctor\n",
+    "home_doctor_subtitle" : "I want to register",
+    "about_us" : "About Us",
+    "sign_in": "Sign In",
+    "register" : "Register",
+    "email": "Email",
+    "enter_your_email" : "Enter Your Email",
+    "password" : "Password",
+    "enter_your_password" : "Enter Your Password",
+    "password_validator" : "Password should be >8 characters",
+    "forget_password" : "Forget Your Password?",
+    "does_have_account" : "Does not have account?",
+
+
+
+    "doctor_form_name" : "Name",
+    "doctor_form_speciality" : "Speciality",
+    "doctor_form_phoneNumber" : "Phone Number",
+    "doctor_form_province": "Province",
+    "doctor_form_location": "Location",
+    "doctor_form_search": "Submit",
+
     "patient_appbar" : "Your Complain",
     "patient_name" : "Name", 
     "patient_male" : "Male",
@@ -20,16 +44,7 @@
     "patient_other_complain" : "Do you have other complains",
     "patient_search_button" : "Search",
     "doctor_form_appbar" : "Update Your Info",
-    "register_appbar" : "Register",
-    "register_email" : "Email",
-    "register_password" : "Password",
-    "register_button": "Register",
-    "doctor_form_name" : "Name",
-    "doctor_form_speciality" : "Speciality",
-    "doctor_form_phoneNumber" : "Phone Number",
-    "doctor_form_province": "Province",
-    "doctor_form_location": "Location",
-    "doctor_form_search": "Submit",
+    
     "cd_HTN" : "Elevated Blood Pressure",
     "cd_DM" : "Diabetus Mellitus",
     "cd_heart" : "Chronic Heart Disease",
