--- a/lang/ar.json
+++ b/lang/ar.json
@@ -3,6 +3,8 @@
     "english" : "انكليزي",
     "arabic" : "عربي",
     "search" :  "ابحث",
+    "submit" : "تم",
+    "google_map" : "كوكل ماب",
     "snack_error_sign" : "خطا في الدخول",
     "snack_connectivity" : "لا يوجد اتصال بالشبكه",
     "home_title" : "اهلا بك في كيورا",
@@ -19,27 +21,47 @@
     "enter_your_password" : "ادخل الرمز السري",
     "password_validator" : "الرمز السري يجب ان يكون اكثر من 8 رموز",
     "forget_password" : "نسيت الرمز السري؟",
-    "does_have_account" : "لم تسجل في التطبيق سابقا؟",
+    "does_not_have_account" : "لم تسجل في التطبيق سابقا؟",
+    "does_have_account" : "لديك حساب سابقا؟",
+    "doctor_form" : "معلومات الطبيب",
+    "name" : "الاسم",
+    "name_validator" : "ادخل اسمك الثلاثي",
+    "speciality" : "الاختصاص",
+    "speciality_validator" : "اختر اختصاصك الطبي",
+    "phoneNumber" : "رقم الهاتف",
+    "phoneNumber_validator" : "رقم الهاتف يجب ان يكون اكثر من 11 رقم",
+    "province": "المحافظه",
+    "province_validator" : "قم بادخال محافظتك",
+    "location": "الموقع",
+    "location_setup" : "حدد موقع عيادتك من خلال",
+
+    "Cardiologist" : "قلبيه",
+    "Pulmonologist" : "تنفسيه",
+    "Endocrinologist" : "غدد صماء",
+    "Enterologist" : " طب الأَمْعاء",
+    "General Surgeon" : "جراحه عامه",
+    "Pediatric Surgeon" : "جراحه اطفال",
+    "ThoracoVascular Surgeon" : "جراحه صدر واوعيه دمويه",
+    "Emergency physician" : "طب الطوارئ",
+    "Internist" : "باطنيه عام",
+    "Pediatrician" : "اطفال",
+    "Gynecologist" : "نسائيه وتوليد",
+    "Rheumatologist" : "مفاصل",
+    "Nephrologist" : "امراض الكلى",
+    "Heamatologist" : "امراض دم",
+    "Neurologist" : "عصبيه",
+    "Urosurgeon" : "جراحه مجاري بوليه",
+    "Orthopaedic Surgeon" : "جراحه كسور",
+    "Neurosurgeon" : "جراحه اعصاب",
+    "Plastic Surgeon" : "جراحه تجميليه",
+    "Dermatologist" : "جلديه",
+    "Ophthalmologist" : "عيون",
+    "Psychiatrist" : "نفسيه",
+    "Laryngologist" : "انف اذن وحنجرة",
 
 
-    "doctor_form_name" : "الاسم",
-    "doctor_form_speciality" : "الاختصاص",
-    "doctor_form_phoneNumber" : "رقم الهاتف",
-    "doctor_form_province": "المحافظه",
-    "doctor_form_location": "الموقع",
-    "doctor_form_search": "ابحث",
 
-
-
-    "patient_appbar" : "ملي المعلومات",
-    "patient_name" : "الاسم", 
-    "patient_male" : "ذكر",
-    "patient_female" : "انثى", 
-    "patient_chronic_diseases" : "الامراض المزمنه",
-    "patient_area_of_choice" : "موضع الجسم الذي تعاني منه",
-    "patient_complain" : "Your complain",
-    "patient_disablehint" : "اولا اختر الموضع الذي تعاني منه",
-    "patient_other_complain" : "هل لديك اعراض اخرى",
+   
     
     "cd_HTN" : "Elevated Blood Pressure",
     "cd_DM" : "Diabetus Mellitus",
